# jags-exgauss

./: Makefile.am  README  configure.ac
src/: Makefile.am  exgauss.cc
src/distributions/: DExgauss.cc  DExgauss.h  Makefile.am
win/: jags.nsi
